--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -30,7 +30,7 @@
     }
 
     &.sticky {
-      overflow-y: auto;
+      //overflow-y: auto;
       /* calculate height of nav list */
       height: calc(
         100vh - 90px - 2em
