--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,3 +6,7 @@
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
+//Override css
+html{
+  font-size: 16px;
+}
