--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,5 +8,15 @@
 @import "minimal-mistakes"; // main partials
 //Override css
 html{
-  font-size: 18px;
+  font-size: 20px;
+  @include breakpoint ($medium){
+    font-size: 18px;
+  }
+  @include breakpoint ($large){
+    font-size: 20px;
+  }
+  @include breakpoint ($x-large){
+    font-size: 22px;
+  }
+
 }
