--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,6 @@
 ---
-layout: archive
+layout: splash
+permalink: /
 ---
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
