--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,7 +8,7 @@
 @import "minimal-mistakes"; // main partials
 //Override css
 html{
-  text-decoration: none;
+
   font-size: 14px;
   @include breakpoint ($small){
     font-size: 14px;
@@ -25,4 +25,7 @@ html{
 }
 blockquote{
   text-align: justify;
+}
+a{
+  text-decoration: none;
 }
