--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -29,3 +29,21 @@ blockquote{
 a{
   text-decoration: none;
 }
+* {box-sizing: border-box}
+
+.container {
+  width: 100%;
+  background-color: #ddd;
+}
+
+.skills {
+  text-align: right;
+  padding-right: 20px;
+  line-height: 40px;
+  color: white;
+}
+
+.php {width: 90%; background-color: #4CAF50;}
+.codeigniter {width: 80%; background-color: #2196F3;}
+.python {width: 65%; background-color: #f44336;}
+.c {width: 60%; background-color: #808080;}
