--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -43,7 +43,7 @@ a{
   color: white;
 }
 
-.php {width: 90%; background-color: #4CAF50;}
+.php {width: 90%; background-color: #e9adad;}
 .codeigniter {width: 80%; background-color: #2196F3;}
 .python {width: 65%; background-color: #f44336;}
 .c {width: 60%; background-color: #808080;}
