--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 
 <html lang="{{ site.locale | slice: 0,2 | default: "en" }}" class="no-js">
   <head>
-    <!--test-->
+    {% include analytics.html %}
     {% include head.html %}
     {% include head/custom.html %}
   </head>
