--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
     {% include analytics.html %}
     {% include head.html %}
     {% include head/custom.html %}
+    {% seo %}
   </head>
 
   <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
