Add other social media icons to my personal page

--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -260,7 +260,7 @@
       {% if author.researchgate %}
         <li>
           <a href="https://www.researchgate.net/profile/{{ author.researchgate }}" itemprop="sameAs">
-            <i class="fab fa-fw fa-vine" aria-hidden="true"></i> Researchgate
+            <i class="fab fa-fw fa-vine" aria-hidden="true"></i> ResearchGate
           </a>
         </li>
       {% endif %}
