--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
 
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
-
+<link rel="stylesheet" href="{{ '/assets/AcademicIcons/css/academicons.min.css' | relative_url }}">
 <!--[if lte IE 9]>
   <style>
     /* old IE unsupported flexbox fixes */
