--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -256,15 +256,15 @@
           </a>
         </li>
       {% endif %}
-      
+
       {% if author.researchgate %}
         <li>
           <a href="https://www.researchgate.net/profile/{{ author.researchgate }}" itemprop="sameAs">
-            <i class="fab fa-fw fa-vine" aria-hidden="true"></i> ResearchGate
+            <i class="ai ai-researchgate-square ai-fw" aria-hidden="true"></i> ResearchGate
           </a>
         </li>
       {% endif %}
-      
+
        {% if author.googlescholar %}
         <li>
           <a href="{{ author.googlescholar }}">
