--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -37,3 +37,21 @@ a{
   font-weight:normal !important;
   
 }
+.link-with-acl {
+  display: inline-flex; /* Align icon and text */
+  align-items: center;
+  text-decoration: none;
+  font-size: 16px; /* Adjust text size */
+}
+
+.link-with-acl::before {
+  content: '';
+  display: inline-block;
+  width: 16px; /* Size of your icon */
+  height: 16px;
+  background-image: url('data:image/svg+xml;base64,../images/acl.svg');
+  background-size: contain; /* Ensures the icon fits within its size */
+  background-repeat: no-repeat;
+  margin-right: 8px; /* Space between icon and text */
+  vertical-align: middle;
+}
