--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -284,7 +284,7 @@
       {% if author.aclanthology %}
         <li>
           <a href="{{ author.aclanthology }}">
-            <i class="ai ai-semantic-scholar-square ai-fw"></i> ACL Anthology
+            <i class="link-with-acl"></i> ACL Anthology
           </a>
         </li>
       {% endif %}
