--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -49,7 +49,7 @@ a{
   display: inline-block;
   width: 16px; /* Size of your icon */
   height: 16px;
-  background-image: url('data:image/svg+xml;base64, https://javad.pourmostafa.com/assets/images/acl.svg');
+  background-image: url('https://javad.pourmostafa.com/assets/images/acl.svg');
   background-size: contain; /* Ensures the icon fits within its size */
   background-repeat: no-repeat;
   margin-right: 8px; /* Space between icon and text */
