--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -37,39 +37,58 @@ a{
   font-weight:normal !important;
   
 }
-.link-with-acl {
-  display: inline-flex; /* Align icon and text */
-  align-items: center;
-  text-decoration: none;
-  font-size: 16px; /* Adjust text size */
-}
+// .link-with-acl {
+//   display: inline-flex; /* Align icon and text */
+//   align-items: center;
+//   text-decoration: none;
+//   font-size: 16px; /* Adjust text size */
+// }
 
-.link-with-acl::before {
-  content: '';
-  display: inline-block;
-  width: 16px; /* Size of your icon */
-  height: 16px;
-  background-image: url('https://joyebright.github.io/assets/images/acl.svg');
-  background-size: contain; /* Ensures the icon fits within its size */
-  background-repeat: no-repeat;
-  margin-right: 8px; /* Space between icon and text */
-  vertical-align: middle;
-}
+// .link-with-acl::before {
+//   content: '';
+//   display: inline-block;
+//   width: 16px; /* Size of your icon */
+//   height: 16px;
+//   background-image: url('https://joyebright.github.io/assets/images/acl.svg');
+//   background-size: contain; /* Ensures the icon fits within its size */
+//   background-repeat: no-repeat;
+//   margin-right: 8px; /* Space between icon and text */
+//   vertical-align: middle;
+// }
+
+// i.link-with-acl {
+//   display: inline-block;
+//   width: 1.15em;
+//   height: 1.15em;
+//   background-color: currentColor;
+//   mask-image: url("https://joyebright.github.io/assets/images/acl.svg");
+//   mask-repeat: no-repeat;
+//   mask-position: center;
+//   mask-size: 100%;
+//   -webkit-mask-image: url("https://joyebright.github.io/assets/images/acl.svg");
+//   -webkit-mask-repeat: no-repeat;
+//   -webkit-mask-position: center;
+//   -webkit-mask-size: 100%;
+//   vertical-align: -0.15em;
+// }
 
 i.link-with-acl {
   display: inline-block;
   width: 1.15em;
   height: 1.15em;
   background-color: currentColor;
+
   mask-image: url("https://joyebright.github.io/assets/images/acl.svg");
   mask-repeat: no-repeat;
   mask-position: center;
-  mask-size: 100%;
+  mask-size: contain;
+
   -webkit-mask-image: url("https://joyebright.github.io/assets/images/acl.svg");
   -webkit-mask-repeat: no-repeat;
   -webkit-mask-position: center;
-  -webkit-mask-size: 100%;
-  vertical-align: -0.15em;
+  -webkit-mask-size: contain;
+
+  vertical-align: -0.15em; /* Matches FontAwesome/AI icons */
 }
 
 
