--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -54,4 +54,5 @@ a{
   background-repeat: no-repeat;
   margin-right: 2px; /* Space between icon and text */
   vertical-align: middle;
+  margin-left: 1px;
 }
