--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -43,6 +43,15 @@ layout: default
           </aside>
         {% endif %}
         {{ content }}
+        
+        {% if page.notion_url %}
+          <p class="external-link">
+            🔗 <a href="{{ page.notion_url }}" target="_blank" rel="noopener">
+              View this post on Notion
+            </a>
+          </p>
+        {% endif %}
+        
         {% if page.link %}<div><a href="{{ page.link }}" class="btn btn--primary">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
       </section>
 
