--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -3,4 +3,21 @@
 <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
 <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
 
+{% if page.mathjax or site.mathjax %}
+<script>
+  window.MathJax = {
+    tex: {
+      inlineMath: [['\\(', '\\)']],
+      displayMath: [['$$', '$$']],
+      processEscapes: true
+    },
+    options: {
+      skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code']
+    }
+  };
+</script>
+<script defer src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+{% endif %}
+
+
 <!-- end custom head snippets -->
